typescript/checker/tests/conformance/parser/ecmascript5/Accessors/parserAccessors8.ts.stderr
error: TS1094
 --> $DIR/tests/conformance/parser/ecmascript5/Accessors/parserAccessors8.ts:2:15
  |
2 | var v = { set foo() { } }
  |               ^^^

